Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-13049

text is not rendered properly when using QStatixText (internal to QGraphicsWidget) and rotation is applied to QGraphicsView on openvg

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.7.0
    • 4.7.0
    • (Inactive) OpenVG
    • None
    • openvg
    • f3771c5d91995b2beaa73bd3e3c783b76a887b50

      We have QGraphicsWidget which internally uses QStaticText to draw the text. It works fine with raster engine. Apply rotations in QGraphicsView and textrendering is broken on OpenVg. It seems positions of Glyphs are not rotated.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            kalyanreddy2005 Kalyan kondapally
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes